# experiment_automator

./: .gitmodules  CMakeLists.txt  readme.md
entry_point/: entry_point.cpp  entry_point.h  main_glfw_metal.mm  main_glwf_opengl2.cpp
src/: application.cpp  application.h  custom_widgets.cpp  custom_widgets.h  test_thread.cpp  test_thread.h
